@@ -3,3 +3,7 @@
 Just a boring man who does some boring things
 
 features snake and tetris
+
+Compiled with jdk12 preview feature
+running: (jre12 needed)
+java -jar --enable-preview Arcade.jar
